--- a/DSC_680_Unsupervised_Learning.ipynb
+++ b/DSC_680_Unsupervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyO62cjCOROjrhTfVDloERcN",
+      "authorship_tag": "ABX9TyPixebj7IKnfHiFnjMefUPX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -564,11 +564,11 @@
         "  n_rows_in = X.shape[0]\n",
         "  n_features_in = X.shape[1]\n",
         "\n",
-        "  # Initializing score array\n",
+        "  # Initializing score arrayS\n",
         "  ensemble_scores = np.zeros([n_rows_in, len(estimator_list)])\n",
         "  final_scores = np.zeros([n_rows_in, 1])\n",
         "\n",
-        "  # Ensemble via score averaging\n",
+        "  # Fitting individual models in the enumerate list\n",
         "  log.info (f'Input data frame size: Rows = {n_rows_in}, Columns = {n_features_in}')\n",
         "\n",
         "  for i, (clf_name, clf) in enumerate(estimator_list.items()):\n",
@@ -598,7 +598,6 @@
         "\n",
         "  # Select the maximum of two ranking values\n",
         "  final_scores = np.max(ensemble_scores, axis = 1)\n",
-        "  # return np.sort(final_scores)\n",
         "\n",
         "  # Make a copy of final score array\n",
         "  pred_y = np.copy(final_scores) \n",
@@ -621,13 +620,13 @@
         "\n",
         "  log.info (f'Percentage of suspicious transactions: {fraud_pct}')\n",
         "\n",
-        "  df_arr=df.to_numpy() # Converting the input data frame to array\n",
-        "  df_arr_f=np.column_stack( (df_arr, pred_y)) # Add the scores to the input data array\n",
+        "  df_arr=df.to_numpy() # Converting the input data frame to data array\n",
+        "  df_arr_f=np.column_stack( (df_arr, pred_y)) # Adding the scores to the input data array\n",
         "\n",
-        "  # Converting the combinded array back to a data frame\n",
+        "  # Converting the final combinded data array back to a data frame\n",
         "  df_f = pd.DataFrame(df_arr_f, columns = ['TRANSACTION_ID','TRANSACTION_TIME','TRXN_MONTH','CLIENT_ID','COUNTRY_NAME','COUNTRY_CODE','CONTINENT_NAME',\t'CONTINENT_CODE','SWIFT_MSG_TYPE','AVG_TRXN_AMT','TRANSACTION_AMOUNT','FRAUD_LABEL']) \n",
         "\n",
-        "  # Output data frame size\n",
+        "  # Output the final data frame size\n",
         "  n_rows_o = df_f.shape[0]\n",
         "  n_features_o = df_f.shape[1]\n",
         "  log.info (f'Output data frame size: Rows = {n_rows_o}, Columns = {n_features_o}')\n",
