--- a/DSC_680_Unsupervised_Learning.ipynb
+++ b/DSC_680_Unsupervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPixebj7IKnfHiFnjMefUPX",
+      "authorship_tag": "ABX9TyNv0hAXzMNYcVxIHPvBAkeD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -620,7 +620,7 @@
         "\n",
         "  log.info (f'Percentage of suspicious transactions: {fraud_pct}')\n",
         "\n",
-        "  df_arr=df.to_numpy() # Converting the input data frame to data array\n",
+        "  df_arr=df.to_numpy() # Converting the input data frame to a data array\n",
         "  df_arr_f=np.column_stack( (df_arr, pred_y)) # Adding the scores to the input data array\n",
         "\n",
         "  # Converting the final combinded data array back to a data frame\n",
