--- a/DSC_680_Unsupervised_Learning.ipynb
+++ b/DSC_680_Unsupervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyM0Q5g+lDI5B/QqE79qFmr3",
+      "authorship_tag": "ABX9TyOM5OOMUjAUtG0VEoOWB0+N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,8 +46,7 @@
       },
       "source": [
         "## **Project Description**\n",
-        "The research practicum involves on-site experiential learning in a research setting. This setting may be in the private or public sector, it may include such locations as education, governmental, non-governmental, or general\n",
-        "research organization. The experience must provide students the opportunity to collect and analyze data, consider ethical implications of research, and draw empirically grounded conclusions."
+        "A global bank sought to find new and innovative means for detecting and preventing fraud in their wire transactions. Their goal is through machine learning to arrive at scenario detection rules which could be customized with parameters specific for each cohort of customers. The immediate challenge was that the data provided had no labels. Therefore, unsupervised machine learning techniques were first employed for this research project. After the labels have been identified, supervised machine learning techniques were then employed with selected tuning parameters to increase both the sensitivity and specificity percentages of both classes."
       ]
     },
     {
@@ -91,7 +90,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive/', force_remount=True)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +137,7 @@
         "from sklearn.model_selection import cross_val_score, KFold\n",
         "from scipy.stats import rankdata"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +164,7 @@
         "input_data = pd.read_csv(\"gdrive/MyDrive/DSC-380/sample_df_4M.txt\")\n",
         "input_data.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,7 +317,7 @@
         "NN_103_df.head()\n",
         "NN_103_df.shape"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +347,7 @@
         "NN_202_df.head()\n",
         "NN_202_df.shape"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +377,7 @@
         "EU_103_df.head()\n",
         "EU_103_df.shape"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +407,7 @@
         "EU_202_df.head()\n",
         "EU_202_df.shape"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,7 +437,7 @@
         "AS_103_df.head()\n",
         "AS_103_df.shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -468,7 +467,7 @@
         "AS_202_df.head()\n",
         "AS_202_df.shape"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -517,7 +516,7 @@
         "def rank_fun(arr):\n",
         "    return rankdata(arr, method = 'dense')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -633,7 +632,7 @@
         "\n",
         "  return df_f"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -650,7 +649,7 @@
         "NN_103_score_df = ensemble_fun (NN_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "NN_103_score_df"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -914,7 +913,7 @@
         "NN_202_score_df = ensemble_fun (NN_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "NN_202_score_df"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1178,7 +1177,7 @@
         "EU_103_score_df = ensemble_fun (EU_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "EU_103_score_df"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1442,7 +1441,7 @@
         "EU_202_score_df = ensemble_fun (EU_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "EU_202_score_df"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1706,7 +1705,7 @@
         "AS_103_score_df = ensemble_fun (AS_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "AS_103_score_df"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1970,7 +1969,7 @@
         "AS_202_score_df = ensemble_fun (AS_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n='auto')\n",
         "AS_202_score_df"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2242,7 +2241,7 @@
         "AS_103_score_df.to_csv('/content/gdrive/MyDrive/DSC-380/AS_103_score_df.cvs',index=False)\n",
         "AS_202_score_df.to_csv('/content/gdrive/MyDrive/DSC-380/AS_202_score_df.cvs',index=False)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
