--- a/DSC_680_Unsupervised_Learning.ipynb
+++ b/DSC_680_Unsupervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPX1Fu5AXIv2y69DNKmZc6g",
+      "authorship_tag": "ABX9TyNRDZeQGoOhjFZWL7m6m7OV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "<b>Runtime Environment:</b> Google Colab<br>\n",
         "<b>Programming Language:</b> Python <br>\n",
         "<b>Sample Data Frame:</b>\n",
-        "A random sample of unlabaled international wires belonging to 139 customers from 3 continents for the entire year of 2020.<br>\n",
+        "A random sample of unlabeled international wires belonging to 139 customers from 3 continents for the entire year of 2020.<br>\n",
         "<b> Last Update:</b> August 5th, 2021"
       ]
     },
