--- a/DSC_680_Supervised_Learning.ipynb
+++ b/DSC_680_Supervised_Learning.ipynb
@@ -5,22 +5,9 @@
     "colab": {
       "name": "DSC_680_Supervised_Learning.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "CPLJCMRMGBRc",
-        "_JknnPrWKF9e",
-        "_TZWp5zhKJHE",
-        "2vCBqxtuKT9s",
-        "D3twS7LwWTmx",
-        "C4H6GeJvEq4j",
-        "6kKbMPWyFJud",
-        "-iVjtupxFoxM",
-        "fYu83cKcFoxU",
-        "-kcddJwRF9K9",
-        "bC78w7-uF9LF",
-        "OVdnhD_XhGes"
-      ],
+      "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOj1NOY7Cg7O6FMCR7ybBbI",
+      "authorship_tag": "ABX9TyNTK6U/q1rT/A83+lulismx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -434,7 +421,6 @@
         "\n",
         "  # Best tunning hyper parameters have been determined with two random iterations\n",
         "  # Data frames used: NN_202_output_df_x_train, NN_202_output_df_y_train\n",
-        "  # {'warm_start': True, 'solver': 'adam', 'random_state': 42, 'max_iter': 300, 'learning_rate': 'adaptive', 'hidden_layer_sizes': (4, 8), 'alpha': 0.05, 'activation': 'logistic'}\n",
         "  clf1_parameter_space = {\n",
         "      'warm_start': [True],\n",
         "      'max_iter': [10000],\n",
