--- a/DSC_680_Supervised_Learning.ipynb
+++ b/DSC_680_Supervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNTK6U/q1rT/A83+lulismx",
+      "authorship_tag": "ABX9TyM3/U1u+rMvwytITbJ60Ase",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -915,7 +915,7 @@
         "id": "HHeqVHWYkOOJ"
       },
       "source": [
-        "##### **Stacking Algorithm = Decision Tree**"
+        "##### **Stacking Algorithm = XGBoost**"
       ]
     },
     {
