--- a/DSC_680_Supervised_Learning.ipynb
+++ b/DSC_680_Supervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyM3/U1u+rMvwytITbJ60Ase",
+      "authorship_tag": "ABX9TyOjI7NHrdCZ/SYOlKWR6/Ds",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -424,7 +424,7 @@
         "  clf1_parameter_space = {\n",
         "      'warm_start': [True],\n",
         "      'max_iter': [10000],\n",
-        "      'hidden_layer_sizes': [(8,16)],\n",
+        "      'hidden_layer_sizes': [(4,8),(8,16),(16,32)],\n",
         "      'activation': ['logistic'],\n",
         "      'solver': ['lbfgs'], # Have to set learning_rate_init if solver is either ’sgd’ or ‘adam’ \n",
         "      'alpha': [0.05,0.1,1.5,2.0,2.5], # Have to set alpha correctly or else all same label values in output \n",
