--- a/DSC_680_Supervised_Learning.ipynb
+++ b/DSC_680_Supervised_Learning.ipynb
@@ -5,17 +5,9 @@
     "colab": {
       "name": "DSC_680_Supervised_Learning.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "drrmU-nkGBRV",
-        "OLwIYHP8GBRa",
-        "CPLJCMRMGBRc",
-        "0-rr0urIIpkg",
-        "shnfGOwJWD-h",
-        "OVdnhD_XhGes",
-        "EuTWuYNpZxRa"
-      ],
+      "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMaTTcTCJATKyITDIo+G/mr",
+      "authorship_tag": "ABX9TyOPx8MgxG/AVqAvqf0asTYC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +55,7 @@
         "id": "YUE-xhQ40sNr"
       },
       "source": [
-        "<b>Purpose:</b><br>\n",
+        "<b>Purpose:</b>\n",
         "Carry out supervised machine learnings with the sample data.<br>\n",
         "<b>Universtiy Name:</b> Utica College <br>\n",
         "<b>Course Name:</b> DSC-680-Z1 Research Practicum <br>\n",
